--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 localStorage.setItem('produtos', JSON.stringify(produtos));
                 alert('Produto atualizado com sucesso!');
                 // Redireciona de volta para a página de listagem
-                window.location.href = 'file:///C:/Users/Matheus%20Pinheiro/Desktop/ud/LISTAGEM/index.html';
+                window.location.href = 'https://matheusfonsecabjj.github.io/lista/';
             }
         }
 
