--- a/index.html
+++ b/index.html
@@ -4,108 +4,98 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editar Produto</title>
-    <link rel="stylesheet" type="text/css" href="logocss.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="editarcc.css" media="screen" />
-</head>
-
-<body>
-    <nav>
-        <div class="logo">
-            <img src="logo.png" alt="Logo"> <!-- Substitua 'logo.png' pelo caminho da sua imagem -->
-        </div>
-        <div class="menu-toggle" onclick="toggleMenu()">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        <div class="menu">
-            <a href="#home">Home</a>
-            <a href="#entrada">Entrada</a>
-            <a href="#saida">Saída</a>
-            <a href="#rank">Rank</a>
-            <a href="#mapeamento">Mapeamento</a>
-        </div>
-    </nav>
-
+    <link rel="stylesheet" type="text/css" href="styles.css" media="screen" />
     <script>
-        function toggleMenu() {
-            const menu = document.querySelector('nav .menu');
-            menu.classList.toggle('active');
+        const apiUrl = "http://localhost:3000"; // Alterar para o URL do backend em produção
+
+        // Função para carregar os dados do produto baseado no SKU
+        async function carregarProduto() {
+            const urlParams = new URLSearchParams(window.location.search);
+            const sku = urlParams.get("sku");
+
+            if (!sku) {
+                alert("SKU não especificado!");
+                return;
+            }
+
+            try {
+                const response = await fetch(`${apiUrl}/produtos/${sku}`);
+                if (!response.ok) {
+                    throw new Error("Erro ao buscar o produto!");
+                }
+
+                const produto = await response.json();
+
+                // Preencher os campos com os dados do produto
+                document.getElementById("codigo").value = produto.codigo;
+                document.getElementById("nome").value = produto.produto;
+                document.getElementById("cor").value = produto.cor;
+                document.getElementById("espessura").value = produto.espessura;
+                document.getElementById("peso").value = produto.peso;
+                document.getElementById("sku").value = produto.sku;
+            } catch (error) {
+                alert("Erro ao carregar os dados do produto: " + error.message);
+            }
         }
+
+        // Função para salvar as alterações
+        async function salvarAlteracoes() {
+            const codigo = document.getElementById("codigo").value;
+            const nome = document.getElementById("nome").value;
+            const cor = document.getElementById("cor").value;
+            const espessura = document.getElementById("espessura").value;
+            const peso = document.getElementById("peso").value;
+            const sku = document.getElementById("sku").value;
+
+            const produtoAtualizado = { codigo, produto: nome, cor, espessura, peso, sku };
+
+            try {
+                const response = await fetch(`${apiUrl}/produtos/${sku}`, {
+                    method: "PUT",
+                    headers: {
+                        "Content-Type": "application/json",
+                    },
+                    body: JSON.stringify(produtoAtualizado),
+                });
+
+                if (!response.ok) {
+                    throw new Error("Erro ao salvar alterações!");
+                }
+
+                alert("Produto atualizado com sucesso!");
+                window.location.href = "listagem.html"; // Redirecionar para a página de listagem
+            } catch (error) {
+                alert("Erro ao salvar alterações: " + error.message);
+            }
+        }
+
+        // Carregar os dados do produto ao iniciar
+        window.onload = carregarProduto;
     </script>
+</head>
+<body>
+    <h1>Editar Produto</h1>
+    <form onsubmit="event.preventDefault(); salvarAlteracoes();">
+        <label for="codigo">Código:</label>
+        <input type="text" id="codigo" readonly />
 
-    <h2>Editar Produto</h2>
-    <form id="formEditProduto">
-        <label for="codigo">Código</label>
-        <input type="text" id="codigo" name="codigo" required><br>
+        <label for="nome">Nome do Produto:</label>
+        <input type="text" id="nome" required />
 
-        <label for="produto">Produto</label>
-        <input type="text" id="produto" name="produto" required><br>
+        <label for="cor">Cor:</label>
+        <input type="text" id="cor" required />
 
-        <label for="cor">Cor</label>
-        <input type="text" id="cor" name="cor" required><br>
+        <label for="espessura">Espessura:</label>
+        <input type="text" id="espessura" required />
 
-        <label for="espessura">Espessura</label>
-        <input type="text" id="espessura" name="espessura" required><br>
+        <label for="peso">Peso:</label>
+        <input type="text" id="peso" required />
 
-        <label for="peso">Peso</label>
-        <input type="text" id="peso" name="peso" required><br>
-
-        <label for="sku">SKU</label>
-        <input type="text" id="sku" name="sku" required disabled><br>
+        <label for="sku">SKU:</label>
+        <input type="text" id="sku" readonly />
 
         <button type="submit">Salvar Alterações</button>
+        <button type="button" onclick="window.location.href='listagem.html'">Cancelar</button>
     </form>
-
-    <script>
-        // Função para carregar o produto da localStorage com base no SKU passado pela URL
-        function carregarProdutoParaEdicao() {
-            const params = new URLSearchParams(window.location.search);
-            const sku = params.get('sku');
-            const produtos = JSON.parse(localStorage.getItem('produtos')) || [];
-            const produto = produtos.find(p => p.sku === sku);
-
-            if (produto) {
-                document.getElementById('codigo').value = produto.codigo;
-                document.getElementById('produto').value = produto.produto;
-                document.getElementById('cor').value = produto.cor;
-                document.getElementById('espessura').value = produto.espessura;
-                document.getElementById('peso').value = produto.peso;
-                document.getElementById('sku').value = produto.sku;
-            } else {
-                alert('Produto não encontrado.');
-            }
-        }
-
-        // Função para salvar as alterações feitas
-        function salvarAlteracoes(event) {
-            event.preventDefault(); // Previne o comportamento padrão do formulário
-
-            const sku = document.getElementById('sku').value;
-            const produtos = JSON.parse(localStorage.getItem('produtos')) || [];
-            const produtoIndex = produtos.findIndex(p => p.sku === sku);
-
-            if (produtoIndex !== -1) {
-                produtos[produtoIndex] = {
-                    codigo: document.getElementById('codigo').value,
-                    produto: document.getElementById('produto').value,
-                    cor: document.getElementById('cor').value,
-                    espessura: document.getElementById('espessura').value,
-                    peso: document.getElementById('peso').value,
-                    sku: sku
-                };
-                localStorage.setItem('produtos', JSON.stringify(produtos));
-                alert('Produto atualizado com sucesso!');
-                // Redireciona de volta para a página de listagem
-                window.location.href = 'https://matheusfonsecabjj.github.io/lista/';
-            }
-        }
-
-        // Carregar o produto e o formulário ao carregar a página
-        window.onload = () => {
-            carregarProdutoParaEdicao();
-            document.getElementById('formEditProduto').addEventListener('submit', salvarAlteracoes);
-        };
-    </script>
 </body>
 </html>
